[gd_scene load_steps=11 format=3 uid="uid://dh6j552ydojs0"]

[ext_resource type="Shader" uid="uid://dtpbkqrwo62oq" path="res://Code/Shaders/main_menu.gdshader" id="1_l6cm7"]
[ext_resource type="Script" uid="uid://dxbpde2ydhpwc" path="res://Code/main_menu.gd" id="1_wu84c"]
[ext_resource type="Shader" uid="uid://chqdqh7a8d1im" path="res://Code/Shaders/main_menu_blur.gdshader" id="2_ekxnf"]
[ext_resource type="FontFile" uid="uid://bx5ntou3xk17w" path="res://assets/Montserrat-Black.otf" id="3_bqqt6"]
[ext_resource type="Shader" uid="uid://bqaj0kj5t3dg1" path="res://Code/Shaders/world.gdshader" id="5_8ln24"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ekxnf"]
shader = ExtResource("1_l6cm7")
shader_parameter/size = Vector2(1280, 720)
shader_parameter/scale = 0.9
shader_parameter/pixels = 32.0
shader_parameter/line_color = Color(0.2, 0.3, 0.5, 1)
shader_parameter/thickness = 4.0000000596048

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bqqt6"]
shader = ExtResource("2_ekxnf")
shader_parameter/blur_radius = 1.60000005225
shader_parameter/tint = Color(0.9019608, 0.9019608, 0.9490196, 0.16470589)
shader_parameter/noise_strength = 0.02

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rtw2f"]
shader = ExtResource("5_8ln24")
shader_parameter/size = Vector2(293, 164)
shader_parameter/scale = 0.9
shader_parameter/pixels = 32.0
shader_parameter/line_color = Color(0.2, 0.3, 0.5, 1)
shader_parameter/thickness = 2.0
shader_parameter/brightness = 2.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_oa1go"]
shader = ExtResource("5_8ln24")
shader_parameter/size = Vector2(293, 164)
shader_parameter/scale = 0.9
shader_parameter/pixels = 64.0
shader_parameter/line_color = Color(0.2, 0.3, 0.5, 1)
shader_parameter/thickness = 2.0
shader_parameter/brightness = 2.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tbmy8"]
shader = ExtResource("5_8ln24")
shader_parameter/size = Vector2(293, 164)
shader_parameter/scale = 0.9
shader_parameter/pixels = 128.0
shader_parameter/line_color = Color(0.2, 0.3, 0.5, 1)
shader_parameter/thickness = 2.0
shader_parameter/brightness = 2.0

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_wu84c")

[node name="Background" type="Node" parent="."]

[node name="grid" type="ColorRect" parent="Background"]
material = SubResource("ShaderMaterial_ekxnf")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="blur" type="ColorRect" parent="Background"]
material = SubResource("ShaderMaterial_bqqt6")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Menu" type="MarginContainer" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 320
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 320
theme_override_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Menu"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Label" type="Label" parent="UI/Menu/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_bqqt6")
theme_override_font_sizes/font_size = 100
text = "TITLE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="UI/Menu/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("3_bqqt6")
theme_override_font_sizes/font_size = 75
text = "Play"

[node name="Button2" type="Button" parent="UI/Menu/VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("3_bqqt6")
theme_override_font_sizes/font_size = 75
text = "QUIT"

[node name="LevelSelect" type="CanvasLayer" parent="UI"]
visible = false

[node name="Left" type="ColorRect" parent="UI/LevelSelect"]
material = SubResource("ShaderMaterial_rtw2f")
offset_left = 150.0
offset_top = 278.0
offset_right = 443.0
offset_bottom = 442.0
grow_horizontal = 2
grow_vertical = 2

[node name="Middle" type="ColorRect" parent="UI/LevelSelect"]
material = SubResource("ShaderMaterial_oa1go")
offset_left = 493.0
offset_top = 278.0
offset_right = 786.0
offset_bottom = 442.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3

[node name="Right" type="ColorRect" parent="UI/LevelSelect"]
material = SubResource("ShaderMaterial_tbmy8")
offset_left = 836.0
offset_top = 278.0
offset_right = 1130.0
offset_bottom = 442.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3

[node name="32" type="Control" parent="UI/LevelSelect"]
layout_mode = 3
anchors_preset = 0
offset_left = 150.0
offset_top = 278.0
offset_right = 443.0
offset_bottom = 442.0
mouse_filter = 2

[node name="Label" type="Label" parent="UI/LevelSelect/32"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -28.0
offset_top = -28.0
offset_right = 28.0
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_bqqt6")
theme_override_font_sizes/font_size = 45
text = "32"

[node name="64" type="Control" parent="UI/LevelSelect"]
layout_mode = 3
anchors_preset = 0
offset_left = 493.0
offset_top = 278.0
offset_right = 786.0
offset_bottom = 442.0
mouse_filter = 2

[node name="Label" type="Label" parent="UI/LevelSelect/64"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -28.0
offset_top = -28.0
offset_right = 28.0
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_bqqt6")
theme_override_font_sizes/font_size = 45
text = "64"

[node name="128" type="Control" parent="UI/LevelSelect"]
layout_mode = 3
anchors_preset = 0
offset_left = 836.0
offset_top = 278.0
offset_right = 1129.0
offset_bottom = 442.0
mouse_filter = 2

[node name="Label" type="Label" parent="UI/LevelSelect/128"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -28.0
offset_top = -28.0
offset_right = 28.0
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_bqqt6")
theme_override_font_sizes/font_size = 45
text = "128"

[node name="Back" type="Button" parent="UI/LevelSelect"]
offset_left = 559.0
offset_top = 540.0
offset_right = 721.0
offset_bottom = 623.0
focus_mode = 0
theme_override_colors/font_color = Color(0.31802028, 0.31801954, 0.31801975, 1)
theme_override_colors/font_hover_color = Color(0.6419339, 0.64193386, 0.6419349, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_bqqt6")
theme_override_font_sizes/font_size = 60
text = "Back"
flat = true

[connection signal="pressed" from="UI/Menu/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="UI/Menu/VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="gui_input" from="UI/LevelSelect/Left" to="." method="_on_left_gui_input"]
[connection signal="mouse_entered" from="UI/LevelSelect/Left" to="." method="_on_left_mouse_entered"]
[connection signal="mouse_exited" from="UI/LevelSelect/Left" to="." method="_on_left_mouse_exited"]
[connection signal="gui_input" from="UI/LevelSelect/Middle" to="." method="_on_middle_gui_input"]
[connection signal="mouse_entered" from="UI/LevelSelect/Middle" to="." method="_on_middle_mouse_entered"]
[connection signal="mouse_exited" from="UI/LevelSelect/Middle" to="." method="_on_middle_mouse_exited"]
[connection signal="gui_input" from="UI/LevelSelect/Right" to="." method="_on_right_gui_input"]
[connection signal="mouse_entered" from="UI/LevelSelect/Right" to="." method="_on_right_mouse_entered"]
[connection signal="mouse_exited" from="UI/LevelSelect/Right" to="." method="_on_right_mouse_exited"]
[connection signal="pressed" from="UI/LevelSelect/Back" to="." method="_on_back_pressed"]
